--- a/pom.xml
+++ b/pom.xml
@@ -64,23 +64,18 @@
             <artifactId>wicket-core</artifactId>
             <version>7.2.0</version>
         </dependency>
- <!--       <dependency>
-            <groupId>org.apache.wicket</groupId>
-            <artifactId>wicket</artifactId>
-            <version>7.2.0</version>
-        </dependency>-->
 
     </dependencies>
     <profiles>
-      <!--  <profile>
-            &lt;!&ndash; When built in OpenShift the 'openshift' profile will be used when
-                invoking mvn. &ndash;&gt;
-            &lt;!&ndash; Use this profile for any OpenShift specific customization your app
-                will need. &ndash;&gt;
-            &lt;!&ndash; By default that is to put the resulting archive into the 'webapps'
-                folder. &ndash;&gt;
-            &lt;!&ndash; http://maven.apache.org/guides/mini/guide-building-for-different-environments.html &ndash;&gt;
-            <id>openshift</id>
+      <profile>
+          <!-- When built in OpenShift the 'openshift' profile will be used when
+               invoking mvn. -->
+          <!-- Use this profile for any OpenShift specific customization your app
+              will need. -->
+          <!-- By default that is to put the resulting archive into the 'webapps'
+              folder. -->
+          <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+          <id>openshift</id>
             <build>
                 <finalName>budgetting</finalName>
                 <plugins>
@@ -94,7 +89,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>-->
+        </profile>
     </profiles>
     <build>
         <resources>
