--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE web-app PUBLIC
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
+
+
 
 <web-app version="3.0"
          xmlns="http://java.sun.com/xml/ns/javaee"
@@ -18,7 +22,7 @@
         <init-param>
             <param-name>applicationClassName</param-name>
             <param-value>
-                WicketApplication
+                be.ghostwritertje.budgetting.wicket.WicketApplication
             </param-value>
         </init-param>
     </filter>
@@ -26,6 +30,10 @@
         <filter-name>wicket.budgetting</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-         
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
 </web-app>
 
