--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>budgetting</groupId>
-    <artifactId>budgetting</artifactId>
+    <groupId>wicket</groupId>
+    <artifactId>wicket</artifactId>
     <packaging>war</packaging>
     <version>1.0</version>
-    <name>budgetting</name>
+    <name>wicket</name>
     <url>http://maven.apache.org</url>
     <repositories>
         <repository>
@@ -134,7 +134,7 @@
             <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
             <id>openshift</id>
             <build>
-                <finalName>budgetting</finalName>
+                <finalName>wicket</finalName>
                 <plugins>
                     <plugin>
                         <artifactId>maven-war-plugin</artifactId>
