--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <version>0.10.6</version>
         </dependency>
         <dependency>
+            <groupId>de.agilecoders.wicket</groupId>
+            <artifactId>wicket-bootstrap-themes</artifactId>
+            <version>0.10.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-spring</artifactId>
             <version>${wicket.version}</version>
