Initial html page set up

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 log4j.rootLogger=error, stdout, rollingFile
 #log4j.rootLogger=info, stdout, rollingFile
 
-be.ghostwritertje.budgetting.logger = info, stdout, rollingFile
+be.estateeleven.logger = info, stdout, rollingFile
 
 ### direct log messages to stdout ###
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
